# dashboard

./: .env.deploy.example  .gitignore  Makefile  README.md  compose.prod.infra.yaml  compose.prod.yaml  compose.yaml  docker-compose.prod.yaml  docker-compose.yaml  llave  llave.pub
backend/: .dockerignore  .env.example  .gitignore  DOMAIN_ARCHITECTURE.md  Dockerfile  Dockerfile.dev  Makefile  README-Windows.md  README.md  alembic.ini  compose.yaml  docker-compose.dev.yml  docker-compose.yml  migrate_domains.py  mypy.ini  pyproject.toml  run.bat  run.cmd  run.ps1
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0d99c2efa49a_initial.py  10b28921b31b_add_dashboard_charts_table.py  11a2fa233d31_update_codigo_snvs_length.py  254d67b5cc6f_add_establecimiento_mapeo_tracking.py  2684e4eb2feb_add_charts_tables.py  2c8da0618e37_initial.py  30924f92d5e7_add_period_columns_to_boletin_instances.py  375dc1fb8546_add_boletin_tables.py  4027c7162835_.py  40a4e08ba52c_.py  41ac61527438_add_processing_jobs_and_datamart_tables.py  4368520b7836_add_boletin_metadata_to_boletin_.py  55b308cf9d98_.py  5931d3c68907_remove_id_from_enfermedad_grupo_table.py  5c8b75de8560_add_authentication_tables.py  5d3c8e6f1ea9_.py  5f5344038a56_change_geocodificado_to_estado_.py  63764c59d17f_.py  665233bbae54_add_timezone_support_to_datetime_columns.py  6b15e4e33fc1_fix_timezone_datetime_columns_properly.py  71fc65dfbf1b_initial.py  7790ac9c4b2f_.py  7f74d379f63f_initial_migration_with_all_tables.py  818cbbda06dd_fix_datetime_timezone_issues.py  825deb7f4ce8_.py  a116b87fea0b_add_num_semanas_to_boletin_instances.py  a19cd800a9c4_initial.py  abafaf850330_add_boletin_snippet_and_simplify_.py  b7a987ea7a11_remove_status_from_boletin_instances.py  b967b3ace0f6_rename_ciudadano_datos_id_evento_to_id_.py  c352319c32e0_add_unique_constraints_to_catalog_tables.py  c664ffec7082_initial.py  c6f9b715b2dd_.py  c8f9e4d2b5a1_make_template_id_optional.py  cee395b9bdf2_.py  d17da35cff5f_make_enfermedad_slug_unique.py  d2f7173550f8_.py  d3e5f6a7b8c2_add_content_to_boletin_instance.py  d45f3312e884_add_content_field_to_boletin_templates.py  e0c9cbabbf3c_initial.py  (+1 more)
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: analytics.py  auth.py  charts.py  estrategias.py  eventos.py  grupos_eno.py  hello.py  reports.py  router.py  tiposEno.py  tipos_eno.py  uploads.py
backend/app/commands/: create_superadmin.py
backend/app/core/: bulk.py  celery_app.py  config.py  constants.py  csv_reader.py  database.py  email.py  epidemiology.py  exceptions.py  middleware.py  models.py  security.py  slug.py
backend/app/core/constants/: geografia_chubut.py
backend/app/core/query_builders/: __init__.py  evento_filters.py
backend/app/core/schemas/: __init__.py  common.py  response.py
backend/app/core/security/: __init__.py  flexible_auth.py  rbac.py  signed_url_auth.py
backend/app/core/shared/: __init__.py  enums.py
backend/app/core/static_data/: geografia_chubut.py
backend/app/core/uploads/: __init__.py  storage.py  validation.py
backend/app/core/utils/: codigo_generator.py
backend/app/domains/: __init__.py
backend/app/domains/analitica/: __init__.py  schemas.py  services.py
backend/app/domains/analytics/: __init__.py  models.py  schemas.py  services.py
backend/app/domains/atencion_medica/: __init__.py  diagnosticos_models.py  investigaciones_models.py  salud_models.py
backend/app/domains/autenticacion/: dependencies.py  models.py  schemas.py  security.py  service.py
backend/app/domains/auth/: dependencies.py  models.py  schemas.py  security.py  service.py
backend/app/domains/boletines/: __init__.py  constants.py  html_renderer.py  models.py  seed_event_section_template.py  seed_static_section.py  seeds.py  seeds_module.py  tiptap_to_html.py
backend/app/domains/catalogos/: __init__.py
backend/app/domains/charts/: __init__.py  conditions.py  models.py  processors.py  schemas.py
backend/app/domains/ciudadanos/: __init__.py  models.py
backend/app/domains/clinica/: __init__.py  diagnosticos_models.py  investigaciones_models.py  salud_models.py
backend/app/domains/consultas/: consultas_models.py
backend/app/domains/dashboard/: __init__.py  age_groups_config.py  conditions.py  models.py  processors.py  schemas.py
backend/app/domains/diagnosticos/: __init__.py  models.py
backend/app/domains/epidemiologia/: __init__.py
backend/app/domains/establecimientos/: __init__.py  models.py
backend/app/domains/estrategias/: __init__.py  models.py  schemas.py  services.py  sync_services.py
backend/app/domains/eventos/: __init__.py  models.py
backend/app/domains/eventos_epidemiologicos/: __init__.py  ambitos_models.py
backend/app/features/: __init__.py
backend/app/schemas/: chart_spec.py  errors.py
backend/app/scripts/: README.md  __init__.py  analyze_dengue_dates.py  check_dengue_grupos.py  cleanup_temp_uploads.py  debug_muestras.py  export_departamentos_ids.py  extract_departamento_centroids.py  reprocess_dengue_csv.py  seed.py  seed_departamentos_coords.py  seed_estrategias_charts.py  seed_strategies.py  test_full_import.py  test_tipos_eno_endpoint.py  truncate_all.py  validate_dengue_comprehensive.py  validate_import.py  verify_tipo_grupo_relations.py
backend/app/services/: boletin_block_renderer.py  boletin_insights_service.py  boletin_query_service.py  chart_renderer.py  chart_spec_generator.py  snippet_renderer.py
backend/app/utils/: topojson_optimizer.py
backend/data/: download_municipios.sh  provincias_departamentos.xlsx
backend/data/geojson/: README.md  chubut_localidades.geojson
backend/data/localidades/: CodLoc02.xls  CodLoc06.xls  CodLoc18.xls  CodLoc26.xls  CodLoc30.xls  CodLoc38.xls
backend/docs/: README.md  arquitectura-procesamiento.md  sistema-metricas.md
backend/scripts/: __init__.py  dev.py  epidemiologia  epidemiologia_cli.py  init_db.py
backend/scripts/seeds/: __init__.py  run_seeds.py  seed_establecimientos.py  seed_eventos.py  seed_geografia.py
backend/tests/: __init__.py
backend/tests/domains/: __init__.py
(+964 files in other folders)
