[project]
name = "epidemiologia-api"
version = "1.0.0"
description = "API del Sistema de Epidemiología"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.0,<2.1.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "alembic>=1.13.1",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-magic>=0.4.27",
    "asyncpg>=0.30.0",
    "werkzeug>=3.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
]


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
    "sqlalchemy-stubs>=0.4",
    "sqlalchemy2-stubs>=0.0.2a38",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
